tenants/europe/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: europe
  labels:
    tenant: europe
