tenants/europe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: europe  # Assuming you have a europe namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: mohamedaziz0801/simple-flask-login:v1
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: app-volume
          mountPath: /app
      volumes:
      - name: app-volume
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: europe
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: web
